--- a/NEWS.txt
+++ b/NEWS.txt
@@ -15,7 +15,8 @@ NEWS
 
 * Fixes label handling
 
-
-0.3dev
+0.2.2
 ------
-*Release Date: UNRELEASED*
+*Release Date: Wed Jul 31 13:59:43 CEST 2013*
+
+* Conditionally export check_* depending on imports
